uniquefine.schauspielhaus.3f86893fa8247730f80a48c2f7ed3236cfeb2f5b
Running as unit: run-p2825586-i15405660.scope; invocation ID: aa21ebd518ed499ea381d2abfcaee713
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.12
   Compiling libc v0.2.149
   Compiling autocfg v1.1.0
   Compiling cfg-if v1.0.0
   Compiling version_check v0.9.4
   Compiling ppv-lite86 v0.2.17
   Compiling siphasher v0.3.11
   Compiling syn v1.0.109
    Checking scopeguard v1.2.0
    Checking smallvec v1.11.1
   Compiling lock_api v0.4.10
   Compiling parking_lot_core v0.9.8
   Compiling serde v1.0.210
   Compiling quote v1.0.37
   Compiling getrandom v0.2.10
    Checking once_cell v1.18.0
    Checking pin-project-lite v0.2.13
   Compiling syn v2.0.77
    Checking parking_lot v0.12.1
   Compiling rand_core v0.6.4
   Compiling getrandom v0.1.16
    Checking memchr v2.6.4
   Compiling futures-core v0.3.28
   Compiling rand_chacha v0.3.1
    Checking log v0.4.20
   Compiling rand v0.8.5
   Compiling uncased v0.9.10
    Checking itoa v1.0.9
   Compiling rand_core v0.5.1
   Compiling cc v1.0.83
   Compiling slab v0.4.9
   Compiling futures-channel v0.3.28
   Compiling vcpkg v0.2.15
   Compiling pkg-config v0.3.27
    Checking bitflags v2.4.0
    Checking futures-sink v0.3.28
   Compiling futures-task v0.3.28
    Checking bytes v1.5.0
   Compiling futures-util v0.3.28
   Compiling openssl-sys v0.9.93
   Compiling rand_chacha v0.2.2
   Compiling rand_pcg v0.2.1
    Checking socket2 v0.5.4
    Checking num_cpus v1.16.0
    Checking signal-hook-registry v1.4.1
    Checking mio v0.8.8
    Checking futures-io v0.3.28
    Checking pin-utils v0.1.0
   Compiling rand v0.7.3
   Compiling phf_shared v0.8.0
   Compiling unicase v2.7.0
    Checking tracing-core v0.1.31
   Compiling phf_shared v0.10.0
   Compiling indexmap v1.9.3
    Checking foreign-types-shared v0.1.1
   Compiling openssl v0.10.57
    Checking fnv v1.0.7
    Checking http v0.2.9
    Checking tracing v0.1.37
    Checking foreign-types v0.3.2
   Compiling phf_generator v0.10.0
   Compiling phf_shared v0.11.2
   Compiling regex-syntax v0.7.5
   Compiling phf_generator v0.8.0
    Checking hashbrown v0.12.3
   Compiling native-tls v0.2.11
   Compiling httparse v1.8.0
   Compiling strsim v0.10.0
   Compiling ident_case v1.0.1
   Compiling proc-macro-hack v0.5.20+deprecated
    Checking tinyvec_macros v0.1.1
    Checking tinyvec v1.6.0
   Compiling regex-automata v0.3.9
   Compiling num-traits v0.2.17
    Checking new_debug_unreachable v1.0.4
    Checking percent-encoding v2.3.0
    Checking openssl-probe v0.1.5
    Checking try-lock v0.2.4
    Checking want v0.3.1
    Checking form_urlencoded v1.2.0
    Checking unicode-normalization v0.1.22
   Compiling mime_guess v2.0.4
   Compiling darling_core v0.13.4
    Checking http-body v0.4.5
   Compiling phf_generator v0.11.2
   Compiling phf_codegen v0.10.0
   Compiling string_cache_codegen v0.5.2
   Compiling regex v1.9.6
    Checking socket2 v0.4.9
   Compiling proc-macro-error-attr v1.0.4
   Compiling erasable v1.2.1
    Checking ryu v1.0.15
    Checking tower-service v0.3.2
   Compiling thiserror v1.0.49
    Checking byteorder v1.5.0
    Checking httpdate v1.0.3
   Compiling convert_case v0.4.0
    Checking precomputed-hash v0.1.1
   Compiling serde_json v1.0.128
    Checking unicode-bidi v0.3.13
    Checking mac v0.1.1
    Checking futf v0.1.5
   Compiling serde_derive v1.0.210
   Compiling futures-macro v0.3.28
   Compiling tokio-macros v2.1.0
   Compiling openssl-macros v0.1.1
    Checking idna v0.4.0
   Compiling darling_macro v0.13.4
   Compiling derive_more v0.99.17
    Checking tokio v1.32.0
   Compiling darling v0.13.4
   Compiling thiserror-impl v1.0.49
   Compiling cssparser v0.27.2
   Compiling phf_macros v0.8.0
   Compiling parse-zoneinfo v0.3.1
   Compiling markup5ever v0.11.0
    Checking futures-executor v0.3.28
   Compiling phf_codegen v0.11.2
   Compiling phf_codegen v0.8.0
   Compiling phf v0.11.2
   Compiling proc-macro-error v1.0.4
   Compiling num-conv v0.1.0
    Checking powerfmt v0.2.0
    Checking mime v0.3.17
    Checking dtoa v1.0.9
    Checking bitflags v1.3.2
   Compiling rustix v0.38.17
    Checking utf8parse v0.2.2
    Checking utf-8 v0.7.6
    Checking iana-time-zone v0.1.57
   Compiling time-core v0.1.2
   Compiling pq-sys v0.4.8
   Compiling time-macros v0.2.18
    Checking chrono v0.4.38
    Checking tendril v0.4.3
    Checking anstyle-parse v0.2.5
    Checking dtoa-short v0.3.4
    Checking phf v0.8.0
   Compiling chrono-tz-build v0.0.3
    Checking tokio-util v0.7.9
    Checking tokio-native-tls v0.3.1
   Compiling selectors v0.22.0
    Checking futures v0.3.28
    Checking h2 v0.3.21
   Compiling serde_with_macros v1.5.2
   Compiling pin-project-internal v1.1.3
   Compiling cssparser-macros v0.6.1
   Compiling html5ever v0.26.0
    Checking phf v0.10.1
   Compiling diesel_table_macro_syntax v0.1.0
    Checking url v2.4.1
    Checking deranged v0.3.11
    Checking serde_urlencoded v0.7.1
    Checking string_cache v0.8.7
    Checking aho-corasick v1.1.1
    Checking scheduled-thread-pool v0.2.7
   Compiling include_dir_macros v0.7.4
    Checking encoding_rs v0.8.33
    Checking stable_deref_trait v1.2.0
    Checking base64 v0.21.4
    Checking matches v0.1.10
   Compiling either v1.9.0
    Checking anstyle v1.0.8
    Checking ipnet v2.8.0
    Checking colorchoice v1.0.2
    Checking hyper v0.14.27
    Checking is_terminal_polyfill v1.70.1
    Checking itoa v0.4.8
    Checking nodrop v0.1.14
    Checking anstyle-query v1.1.1
    Checking linux-raw-sys v0.4.9
    Checking anstream v0.6.15
    Checking servo_arc v0.1.1
    Checking time v0.3.36
   Compiling itertools v0.10.5
   Compiling include_dir v0.7.4
    Checking r2d2 v0.8.10
    Checking pin-project v1.1.3
    Checking serde_with v1.14.0
   Compiling diesel_derives v2.1.2
    Checking rc-box v1.2.0
    Checking hyper-tls v0.5.0
    Checking reqwest v0.11.22
   Compiling chrono-tz v0.6.3
    Checking fxhash v0.2.1
    Checking uuid v1.4.1
   Compiling heck v0.4.1
   Compiling anyhow v1.0.75
    Checking take_mut v0.2.2
    Checking clap_lex v0.7.2
    Checking unicode-width v0.1.11
   Compiling heck v0.5.0
    Checking strsim v0.11.1
    Checking takecell v0.1.1
    Checking vecrem v0.1.0
    Checking thin-slice v0.1.1
    Checking clap_builder v4.5.17
    Checking teloxide-core v0.10.1
   Compiling clap_derive v4.5.13
    Checking getopts v0.2.21
   Compiling teloxide-macros v0.8.0
   Compiling aquamarine v0.5.0
    Checking is-terminal v0.4.9
    Checking dptree v0.3.0
    Checking tokio-stream v0.1.14
    Checking ego-tree v0.6.2
    Checking termcolor v1.3.0
    Checking humantime v2.1.0
    Checking scraper v0.13.0
    Checking clap v4.5.17
    Checking env_logger v0.10.0
    Checking ical v0.7.0
    Checking lazy_static v1.4.0
    Checking dotenvy v0.15.7
    Checking diesel v2.1.3
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.1.3/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking teloxide v0.13.0
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
